<resources>
    <string name="app_name">Zikyu</string>

    <!--START: MainActivity-->
    <string name="action_answer_qna">Answer QNA</string>
    <string name="action_qna_builder">QNA Builder</string>

    <!--START: QnaAnswerActivity-->
    <string name="title_qna">Question and Answer</string>
    <string name="msg_progress">Question %1$d/%2$d | C:%3$d M:%4$d</string>
    <string name="msg_correct">Correct!</string>
    <string name="msg_mistake">Mistake!</string>
    <string name="msg_reset">Questions and Answers were reset.</string>
    <string name="msg_confirm_exit">Press back again to go back.</string>

    <string name="action_check_answer">Check Answer</string>
    <string name="action_overflow">Overflow</string>
    <string name="action_reset">Reset QnA</string>
    <string name="action_sound">Sound</string>

    <!--START: QnaBuilderActivity-->
    <string name="title_qna_builder">QnA Builder</string>
    <string name="msg_question">Question</string>
    <string name="msg_enter_question">Enter your question here.</string>
    <string name="msg_answer">Answer</string>
    <string name="msg_enter_answer">Enter your answer here.</string>
    <string name="action_add">Add</string>

    <string name="action_save_qna">Save QnA</string>

    <!-- START: Load Activity-->
    <string name="title_load">Load QnA</string>
    <string name="msg_choose_file">Choose a Subject to load</string>

    <string name="list_qna_count">No. of QnA: %1$d</string>

    <!-- START: Result Activity -->
    <string name="title_result_activity">Result</string>
    <string name="msg_result">You got %1$d / %2$d</string>
    <string name="action_answer_mistake">Answer Mistakes Only</string>
    <string name="action_reset_qna">Reset QnA</string>
    <string name="action_load_different_qna">Load QnA</string>

    <!-- START: About Activity -->
    <string name="title_about_activity">About</string>
    <string name="action_info">Show Information</string>
    <string name="msg_version">BETA Version: 0.2.3</string>
    <string name="msg_developer">Developer: Zaerald Denze Lungos</string>
    <string name="msg_app_description">Simple reviewer application that lets you answer identification
        questions with multiple choices, to practice and tackle the questions repeatedly. To help
        students review and to test their knowledge before taking tests or exams, to know what are
        the things they already know in the subject.
    </string>
    <string name="view_source">View Source on GitHub</string>

</resources>
