<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/menu_action_overflow"
        android:orderInCategory="1"
        android:title="@string/action_overflow"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_reset"
                android:title="@string/action_reset"
                app:showAsAction="ifRoom|withText"/>

            <item
                android:id="@+id/action_sound"
                android:checkable="true"
                android:title="@string/action_sound"
                app:actionViewClass="android.widget.CheckBox"
                app:showAsAction="ifRoom|withText"/>
        </menu>

    </item>
</menu>